# EDA-AI

./: .gitignore  README.md  fullplace_env.py  main.py  rnd.py
DSBRouter/: readme.md  requirements.txt
DSBRouter/eval_utils/: diffusion_utils.py  gan_utils.py  inference_utils.py
DSBRouter/evaluate/: REST_utils.py  inference.py  train.py  utils.py
DeepPlace/: Placer.py  README.md  configure.py  fullplace_env.py  main.py  place_env.py  requirements.txt  validation.py
DeepPlace/a2c_ppo_acktr/: envs.py
DeepPlace/data/: 3_dic.npy
FlexPlanner/: README.md  main.py  ps.sh  requirements.txt  test_train.sh
FlexPlanner/arguments/: __init__.py  args.py
FlexPlanner/circuit_dataloader/: __init__.py  construct_adjacent_block.py  construct_adjacent_terminal.py  construct_fp_info.py  construct_layer.py  construct_partner.py  construct_pre_placed_module.py  parser.py
FlexPlanner/collector/: __init__.py  collect_statistics.py  collector.py
FlexPlanner/config/: config.py
FlexPlanner/data/: ami33.blk.csv  ami33.net.csv  ami33.tml.csv  ami49.blk.csv  ami49.net.csv  ami49.tml.csv  n10.blk.csv  n10.net.csv  n10.tml.csv  n100.blk.csv  n100.net.csv  n100.tml.csv  n200.blk.csv  n200.net.csv  n200.tml.csv  n30.blk.csv  n30.net.csv  n30.tml.csv  n300.blk.csv  n300.net.csv  n300.tml.csv  n50.blk.csv  n50.net.csv  n50.tml.csv
FlexPlanner/fp_env/: __init__.py  block.py  fp_info.py  net.py  place_env.py  terminal.py
FlexPlanner/model/: __init__.py  actor.py  critic.py  generator.py  graph_model.py  layer_decider.py  ratio_decider.py  sequence_encoder.py  shared_encoder.py  transformer.py  transformer2.py  vit.py
FlexPlanner/policy/: __init__.py  a2c.py  base.py  load_policy.py  pg.py  ppo.py
FlexPlanner/script/: alignment.sh
FlexPlanner/thermal/: __init__.py  kernel.py  thermal_fft.py
FlexPlanner/trainer/: __init__.py  base.py  onpolicy.py
FlexPlanner/utils/: __init__.py  draw.py  tensorboard.py  utils.py  write_result.py
HubRouter/: .gitignore  README.md  inference.py  main.py  main_REST.py  requirements.txt
HubRouter/REST_tool/: REST_utils.py
HubRouter/configs/: FMCG-DDPM-ISPD.yaml  FMCG-DDPM-REST.yaml  FMCG-GAN-ISPD.yaml  FMCG-GAN-REST.yaml  FMCG-VAE-ISPD.yaml  FMCG-VAE-REST.yaml  REST.yaml  test-ISPD.yaml  test-REST.yaml
HubRouter/data/: RSMT.py  aligned.py  condition.py  data_interface.py
HubRouter/models/: __init__.py  actor_critic.py  ddim.py  gan.py  model_interface.py  template_models.py  vae.py
HubRouter/preprocess/: generateInput.py  grid.py  utils.py
HubRouter/utils/: __init__.py  base_utils.py  data_utils.py  diffusion_utils.py  gan_utils.py  inference_utils.py
OAREST/: LICENSE  README.md  main.py  requirements.txt
OAREST/REST_tool/: REST_utils.py
OAREST/REST_tool/algorithms/: CMakeLists.txt  eval.h
OAREST/REST_tool/algorithms/geosteiner/: ChangeLog  INSTALL  RELEASE_NOTES  analyze.c  bb.c  bbmain.dep  bbsubs.h  bsd.c  bsd.lo  btsearch.c  btsearch.lo  channels.c  check_lib_syms.sh  ckpt.h  config.h.in  configure.ac  constrnt.dep  costextension.h  cra.c  cra.lo  cutset.dep  cutset.lo  demo2.c  demo4.c  dsuf.h  dt.c  dt.lo  efst  efst.dep  efstmain.c  emptyr.dep  emst.c  environment.c  environment.dep  esmt.lo  expand.c  expand.dep  expand.h  fatal.c  flow.dep  (+65 more)
OAREST/REST_tool/algorithms/geosteiner/lp_solve_2.3/: MPS.description  NETLIB_RESULTS  README  debug.c  debug.h  hash.h  lp.y  lp_solve.1  lpglob.h  mps2lp.c  solve.c
OAREST/REST_tool/algorithms/geosteiner/lp_solve_2.3/lp_examples/: ex2.out  ex5.out
OAREST/configs/: OAREST_test.yaml  OAREST_train.yaml
OAREST/data/: RSMT.py  data_interface.py
OAREST/models/: __init__.py  actor_critic.py  model_interface.py  self_attn.py
OAREST/utils/: __init__.py  base_utils.py  obstacle_utils.py  plot_utils.py  rsmt_utils.py
PRNet/: MST.py  README.md  data_generator.py  environment_v2.py  main.py  requirements.txt  rnd.py  route_env.py  test.py  testNet.py  train.py  train_expand.py
PRNet/a2c_ppo_acktr/: arguments.py  model.py  storage.py
PRNet/data/: __init__.py  aligned_dataset.py  base_dataset.py  image_folder.py  net_feature_710.pt  simpAligned_dataset.py  test.py  test_dataset.py
PRNet/eval/: evaluator.py
PRNet/logs/: comp_resnet_more0  comp_resnet_more1  comp_resnet_more2  composite0_again  composite1_again  composite_more0  composite_more1  composite_more2  composite_more3  composite_more_basicD  composite_more_basicD_smooth  composite_more_filtered0  composite_more_sigmoid  composite_more_sigmoid_smo  composite_more_smooth0  composite_more_smooth1D  composite_more_smooth_sigmoid  composite_more_smooth_sigmoid_smo  composite_more_smooth_sigmoid_smo_lr10  composite_more_smooth_sigmoid_smo_lr4  composite_sa0  composite_sa1  generator0  generator_more0  generator_more_focal1000
PRNet/models/: L1NormLoss.py  base_model.py  composite_model.py  critical_model.py  cvae_model.py  cvaegan_model.py  expand_model.py  generator_model.py  inference_model.py  loss.py  multi_model.py  network_swinir.py  networks.py  pix2pix_model.py  router_model.py  stf_model.py  test_model.py
PRNet/options/: __init__.py  base_options.py  test_options.py  train_options.py
PRNet/utils/: grid.py  image_pool.py  init.py  new_c_utils.cpp  postprocess.py  spectral.py  utils.py  visualizer.py
PreRoutGNN/: README.md  main.py  main_graph_autoencoder.py  requirements.txt  test.sh  train_PreRoutGNN.sh  train_encoder.sh
PreRoutGNN/checkpoint/: TimingGCN_15799.pt
PreRoutGNN/circuits_json/: circuits-original.json
PreRoutGNN/circuits_split_json/: data_split-original.json
PreRoutGNN/config/: __init__.py  config.py  config_autoencoder.py  get_args.py  get_args_autoencoder.py
PreRoutGNN/dataset/: __init__.py  data_hetero.py  data_homo.py
PreRoutGNN/encoding/: __init__.py  positional_encoding.py
PreRoutGNN/metric/: ablation_study.py  metric.py
PreRoutGNN/model/: __init__.py  deep_gcnii.py  ema.py  homo.py  mlp.py
PreRoutGNN/trainer/: __init__.py  test.py  train.py
PreRoutGNN/utils/: utils.py
a2c_ppo_acktr/: arguments.py  model.py
a2c_ppo_acktr/algo/: ppo.py
awesome-ai4eda/: README.md
(+422 files in other folders)
